# shirdal

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
sample/: benchmark.py  client.py  counter.py  pingpong.py  printer.py  server.py
sample/counter/: client.py  local.py  server.py
shirdal/: __init__.py  app.py  broker.py  service.py  utils.py
shirdal/core/: __init__.py  broker.py  container.py  di.py  message.py  queue.py  service.py  task.py
shirdal/net/: __init__.py  broker.py  rpc.py  serialize.py  socket.py  task.py
tests/: broker.py  test_app.py  test_broker.py  test_container.py  test_rpc.py
